z-index error fix

--- a/styles/styles.module.scss
+++ b/styles/styles.module.scss
@@ -16,6 +16,8 @@
   justify-content: center;
   align-items: center;
   .options{
+    z-index: 100;
+    position: relative;
     margin-top:30px;
     .options_item{
       margin-right:25px;
@@ -103,7 +105,6 @@
     text-align:center;
     left:0;
     height:auto;
-    z-index:10;
     width:100vw;
     transition:.3s ease-in-out all;
     @media screen and (max-width:700px){
@@ -175,6 +176,7 @@
   }
 
   .actions_active{
+      z-index:10;
       @media screen and (max-width:700px){
         height:100vh;
         bottom:0;
